# eventr

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  license.txt
benchmarks/: CMakeLists.txt  sample_benchmark.cpp
examples/: CMakeLists.txt  packet_rx.cpp  read1.cpp  read_timer1.cpp  read_timer2.cpp  tcp_client1.cpp  tcp_server1.cpp  timer1.cpp  timer2.cpp  udp_echo1.cpp  udp_multicast1.cpp  udp_receiver1.cpp
include/: epoll_handler.h  event.h  eventer.h  eventr.h  fd_reader.h  iio_handler.h  io_handler.h  ireader.h  isocket.h  itcp_socket.h  itimer.h  iudp_socket.h  rtc_timer.h  tcp_comm_socket.h  tcp_server_socket.h  timer.h  udp_receiver.h  udp_socket.h
src/: CMakeLists.txt  config.h.in  eventer.cpp  eventr.cpp
tests/: CMakeLists.txt  epoll_hander_tests.cpp  epoll_handler_tests.cpp  eventr_test.cpp  main.cpp  sample_test.cpp
